# componentize

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json
app/: main.py
app/agent/: interaction_agent.py  tools.py
client/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/scripts/: debug-node-css.ts  test-canvas.ts
client/src/: App.tsx  index.css
client/src/components/: ChatPanel.tsx  CodePreviewPanel.tsx  ComponentGenerator.tsx  ComponentLibrary.tsx  ConnectionsOverlay.tsx  DragDropCanvas.tsx  ExportButton.tsx  GenerationPanel.tsx  InteractionPanel.tsx  LeftPanel.tsx  PropertyPanel.tsx  ResizeHandle.tsx  StatusOrb.tsx  Timeline.tsx  TimelineEvent.tsx
client/src/config/: index.ts
deprecated/app/: pyproject.toml
deprecated/app/agent/: component_agent.py
scripts/: record-demo.ts  screenshot-compare.ts  screenshot-focusly.ts  screenshot-layouts.ts
server/: .env  .env.example  .gitignore  package-lock.json  package.json  test-atomic.js  tsconfig.json
server/scripts/: benchmark.ts  decompose-project.ts  runDecompose.ts  testDecompose.ts  test_render.ts  test_sse_stream.py
server/src/: app.ts  index.ts  server.ts
shared/constants/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts
shared/types/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts
test-layouts/: index.html  package-lock.json  package.json  playwright.config.ts  screenshot.spec.ts  vite.config.ts
test-layouts/src/: App.tsx  layout-types.ts
(+117 files in other folders)
